chore: re-modeling user, ai and tool messages