@@ -38,8 +38,8 @@ public class SessionMemoryEntityTest {
     var timestamp = System.currentTimeMillis();
     String userMsg = "Hello, how are you?";
     String aiMsg = "I'm fine, thanks for asking!";
-    UserMessage userMessage = new UserMessage(timestamp, userMsg, COMPONENT_ID, TOKENS);
-    var aiMessage = new AiMessage(timestamp, aiMsg, COMPONENT_ID, TOKENS);
+    UserMessage userMessage = new UserMessage(timestamp, userMsg, COMPONENT_ID);
+    var aiMessage = new AiMessage(timestamp, aiMsg, COMPONENT_ID, TOKENS, TOKENS);
 
     // when
     EventSourcedResult<Done> result = testKit.method(SessionMemoryEntity::addInteraction)
@@ -51,18 +51,18 @@ public class SessionMemoryEntityTest {
     // Check events - ignoring timestamp comparison
     var events = result.getAllEvents();
     assertThat(events).hasSize(2);
-    assertThat(events.get(0)).isInstanceOf(SessionMemoryEntity.Event.UserMessageAdded.class);
-    var userEvent = (SessionMemoryEntity.Event.UserMessageAdded) events.get(0);
+    assertThat(events.getFirst()).isInstanceOf(SessionMemoryEntity.Event.UserMessageAdded.class);
+    var userEvent = (SessionMemoryEntity.Event.UserMessageAdded) events.getFirst();
     assertThat(userEvent.componentId()).isEqualTo(COMPONENT_ID);
     assertThat(userEvent.message()).isEqualTo(userMsg);
-    assertThat(userEvent.tokens()).isEqualTo(TOKENS);
     assertThat(userEvent.timestamp()).isEqualTo(timestamp);
 
     assertThat(events.get(1)).isInstanceOf(SessionMemoryEntity.Event.AiMessageAdded.class);
     var aiEvent = (SessionMemoryEntity.Event.AiMessageAdded) events.get(1);
     assertThat(aiEvent.componentId()).isEqualTo(COMPONENT_ID);
     assertThat(aiEvent.message()).isEqualTo(aiMsg);
-    assertThat(aiEvent.tokens()).isEqualTo(TOKENS);
+    assertThat(aiEvent.inputTokens()).isEqualTo(TOKENS);
+    assertThat(aiEvent.outputTokens()).isEqualTo(TOKENS);
     assertThat(aiEvent.timestamp()).isEqualTo(timestamp);
 
     // when retrieving history
@@ -85,10 +85,10 @@ public class SessionMemoryEntityTest {
     String userMsg2 = "How are you?";
     String aiMsg2 = "I'm doing great!";
 
-    var userMessage1 = new UserMessage(timestamp, userMsg1, COMPONENT_ID, TOKENS);
-    var aiMessage1 = new AiMessage(timestamp, aiMsg1, COMPONENT_ID, TOKENS);
-    var userMessage2 = new UserMessage(timestamp+1, userMsg2, COMPONENT_ID, TOKENS);
-    var aiMessage2 = new AiMessage(timestamp +1, aiMsg2, COMPONENT_ID, TOKENS);
+    var userMessage1 = new UserMessage(timestamp, userMsg1, COMPONENT_ID);
+    var aiMessage1 = new AiMessage(timestamp, aiMsg1, COMPONENT_ID, TOKENS, TOKENS);
+    var userMessage2 = new UserMessage(timestamp + 1, userMsg2, COMPONENT_ID);
+    var aiMessage2 = new AiMessage(timestamp + 1, aiMsg2, COMPONENT_ID, TOKENS, TOKENS);
 
     // when
     testKit.method(SessionMemoryEntity::addInteraction)
@@ -117,8 +117,8 @@ public class SessionMemoryEntityTest {
     var testKit = EventSourcedTestKit.of(() -> new SessionMemoryEntity(config));
     var timestamp = System.currentTimeMillis();
 
-    var userMessage1 = new UserMessage(timestamp, "Hello", COMPONENT_ID, TOKENS);
-    var aiMessage1 = new AiMessage(timestamp, "Hi there!", COMPONENT_ID, TOKENS);
+    var userMessage1 = new UserMessage(timestamp, "Hello", COMPONENT_ID);
+    var aiMessage1 = new AiMessage(timestamp, "Hi there!", COMPONENT_ID, TOKENS, TOKENS);
 
     testKit.method(SessionMemoryEntity::addInteraction)
         .invoke(new AddInteractionCmd(userMessage1, aiMessage1));
@@ -128,8 +128,8 @@ public class SessionMemoryEntityTest {
         testKit.method(SessionMemoryEntity::getHistory).invoke(emptyGetHistory);
     var sequenceNumber = historyResult.getReply().sequenceNumber();
     assertThat(sequenceNumber).isEqualTo(2L);
-    var userMessage2 = new UserMessage(timestamp, "Hey", COMPONENT_ID, TOKENS / 2);
-    var aiMessage2 = new AiMessage(timestamp, "Hi!", COMPONENT_ID, TOKENS / 2);
+    var userMessage2 = new UserMessage(timestamp, "Hey", COMPONENT_ID);
+    var aiMessage2 = new AiMessage(timestamp, "Hi!", COMPONENT_ID, TOKENS / 2, TOKENS / 2);
     var cmd = new SessionMemoryEntity.CompactionCmd(userMessage2, aiMessage2, sequenceNumber);
     EventSourcedResult<Done> compactResult = testKit.method(SessionMemoryEntity::compactHistory)
         .invoke(cmd);
@@ -143,8 +143,10 @@ public class SessionMemoryEntityTest {
     assertThat(events.get(0)).isInstanceOf(SessionMemoryEntity.Event.HistoryCleared.class);
     assertThat(events.get(1)).isInstanceOf(SessionMemoryEntity.Event.UserMessageAdded.class);
     assertThat(events.get(2)).isInstanceOf(SessionMemoryEntity.Event.AiMessageAdded.class);
-    assertThat(((SessionMemoryEntity.Event.UserMessageAdded) events.get(1)).totalTokenUsage()).isEqualTo(TOKENS / 2);
-    assertThat(((SessionMemoryEntity.Event.AiMessageAdded) events.get(2)).totalTokenUsage()).isEqualTo(TOKENS);
+
+    var aiMsgAdded = (SessionMemoryEntity.Event.AiMessageAdded) events.get(2);
+    assertThat(aiMsgAdded.inputTokens()).isEqualTo(TOKENS / 2);
+    assertThat(aiMsgAdded.outputTokens()).isEqualTo(TOKENS / 2);
 
     // when retrieving history after compacting
     EventSourcedResult<SessionHistory> historyResult2 =
@@ -162,8 +164,8 @@ public class SessionMemoryEntityTest {
     var testKit = EventSourcedTestKit.of(() -> new SessionMemoryEntity(config));
     var timestamp = System.currentTimeMillis();
 
-    var userMessage1 = new UserMessage(timestamp, "Hello", COMPONENT_ID, TOKENS);
-    var aiMessage1 = new AiMessage(timestamp, "Hi there!", COMPONENT_ID, TOKENS);
+    var userMessage1 = new UserMessage(timestamp, "Hello", COMPONENT_ID);
+    var aiMessage1 = new AiMessage(timestamp, "Hi there!", COMPONENT_ID, TOKENS, TOKENS);
 
     testKit.method(SessionMemoryEntity::addInteraction)
         .invoke(new AddInteractionCmd(userMessage1, aiMessage1));
@@ -173,13 +175,13 @@ public class SessionMemoryEntityTest {
         testKit.method(SessionMemoryEntity::getHistory).invoke(emptyGetHistory);
     var sequenceNumber = historyResult.getReply().sequenceNumber();
     assertThat(sequenceNumber).isEqualTo(2L);
-    var userMessage2 = new UserMessage(timestamp, "Hey", COMPONENT_ID, TOKENS / 2);
-    var aiMessage2 = new AiMessage(timestamp, "Hi!", COMPONENT_ID, TOKENS / 2);
+    var userMessage2 = new UserMessage(timestamp, "Hey", COMPONENT_ID);
+    var aiMessage2 = new AiMessage(timestamp, "Hi!", COMPONENT_ID, TOKENS / 2, TOKENS / 2);
     var cmd = new SessionMemoryEntity.CompactionCmd(userMessage2, aiMessage2, sequenceNumber);
 
-    // but before making the compaction update there is some other update
-    var userMessage3 = new UserMessage(timestamp, "I'm Alice", COMPONENT_ID, TOKENS);
-    var aiMessage3 = new AiMessage(timestamp, "Hi Alice, I'm bot", COMPONENT_ID, TOKENS);
+    // but before making the compaction update, there is some other update
+    var userMessage3 = new UserMessage(timestamp, "I'm Alice", COMPONENT_ID);
+    var aiMessage3 = new AiMessage(timestamp, "Hi Alice, I'm bot", COMPONENT_ID, TOKENS, TOKENS);
     testKit.method(SessionMemoryEntity::addInteraction)
         .invoke(new AddInteractionCmd(userMessage3, aiMessage3));
 
@@ -213,8 +215,8 @@ public class SessionMemoryEntityTest {
     String userMsg = "Hello";
     String aiMsg = "Hi there!";
 
-    var userMessage = new UserMessage(timestamp, userMsg, COMPONENT_ID, TOKENS);
-    var aiMessage = new AiMessage(timestamp, aiMsg, COMPONENT_ID, TOKENS);
+    var userMessage = new UserMessage(timestamp, userMsg, COMPONENT_ID);
+    var aiMessage = new AiMessage(timestamp, aiMsg, COMPONENT_ID, TOKENS, TOKENS);
 
     testKit.method(SessionMemoryEntity::addInteraction)
       .invoke(new AddInteractionCmd(userMessage, aiMessage));
@@ -267,14 +269,14 @@ public class SessionMemoryEntityTest {
     String userMsg4 = "Fourth message";     // 14 bytes
     String aiMsg4 = "Fourth response";      // 15 bytes
 
-    var userMessage1 = new UserMessage(timestamp, userMsg1, COMPONENT_ID, TOKENS);
-    var aiMessage1 = new AiMessage(timestamp, aiMsg1, COMPONENT_ID, TOKENS);
-    var userMessage2 = new UserMessage(timestamp+1, userMsg2, COMPONENT_ID, TOKENS);
-    var aiMessage2 = new AiMessage(timestamp+1, aiMsg2, COMPONENT_ID, TOKENS);
-    var userMessage3 = new UserMessage(timestamp+2, userMsg3, COMPONENT_ID, TOKENS);
-    var aiMessage3 = new AiMessage(timestamp+2, aiMsg3, COMPONENT_ID, TOKENS);
-    var userMessage4 = new UserMessage(timestamp+3, userMsg4, COMPONENT_ID, TOKENS);
-    var aiMessage4 = new AiMessage(timestamp+3, aiMsg4, COMPONENT_ID, TOKENS);
+    var userMessage1 = new UserMessage(timestamp, userMsg1, COMPONENT_ID);
+    var aiMessage1 = new AiMessage(timestamp, aiMsg1, COMPONENT_ID, TOKENS, TOKENS);
+    var userMessage2 = new UserMessage(timestamp + 1, userMsg2, COMPONENT_ID);
+    var aiMessage2 = new AiMessage(timestamp + 1, aiMsg2, COMPONENT_ID, TOKENS, TOKENS);
+    var userMessage3 = new UserMessage(timestamp + 2, userMsg3, COMPONENT_ID);
+    var aiMessage3 = new AiMessage(timestamp + 2, aiMsg3, COMPONENT_ID, TOKENS, TOKENS);
+    var userMessage4 = new UserMessage(timestamp + 3, userMsg4, COMPONENT_ID);
+    var aiMessage4 = new AiMessage(timestamp + 3, aiMsg4, COMPONENT_ID, TOKENS, TOKENS);
 
     // Set buffer size to just fit messages 2, 3, and 4 (total 85 bytes)
     // userMsg2(14) + aiMsg2(15) + userMsg3(13) + aiMsg3(14) + userMsg4(14) + aiMsg4(15) = 85 bytes
@@ -323,12 +325,12 @@ public class SessionMemoryEntityTest {
     String userMsg3 = "Third message";      // 13 bytes
     String aiMsg3 = "Third response";       // 14 bytes
 
-    var userMessage1 = new UserMessage(timestamp, userMsg1, COMPONENT_ID, TOKENS);
-    var aiMessage1 = new AiMessage(timestamp, aiMsg1, COMPONENT_ID, TOKENS);
-    var userMessage2 = new UserMessage(timestamp + 1, userMsg2, COMPONENT_ID, TOKENS);
-    var aiMessage2 = new AiMessage(timestamp + 1, aiMsg2, COMPONENT_ID, TOKENS);
-    var userMessage3 = new UserMessage(timestamp + 2, userMsg3, COMPONENT_ID, TOKENS);
-    var aiMessage3 = new AiMessage(timestamp + 2, aiMsg3, COMPONENT_ID, TOKENS);
+    var userMessage1 = new UserMessage(timestamp, userMsg1, COMPONENT_ID);
+    var aiMessage1 = new AiMessage(timestamp, aiMsg1, COMPONENT_ID, TOKENS, TOKENS);
+    var userMessage2 = new UserMessage(timestamp + 1, userMsg2, COMPONENT_ID);
+    var aiMessage2 = new AiMessage(timestamp + 1, aiMsg2, COMPONENT_ID, TOKENS, TOKENS);
+    var userMessage3 = new UserMessage(timestamp + 2, userMsg3, COMPONENT_ID);
+    var aiMessage3 = new AiMessage(timestamp + 2, aiMsg3, COMPONENT_ID, TOKENS, TOKENS);
 
     // Set buffer size to just fit messages 1 and 2 (total 56 bytes)
     // userMsg1(13) + aiMsg1(14) + userMsg2(14) + aiMsg2(15) = 56 bytes
@@ -343,8 +345,8 @@ public class SessionMemoryEntityTest {
 
     // then
     assertThat(result1.getReply().messages()).containsExactly(
-      new UserMessage(timestamp, userMsg1, COMPONENT_ID, TOKENS),
-      new AiMessage(timestamp, aiMsg1, COMPONENT_ID, TOKENS));
+      new UserMessage(timestamp, userMsg1, COMPONENT_ID),
+      new AiMessage(timestamp, aiMsg1, COMPONENT_ID, TOKENS, TOKENS));
     assertThat(result1.getReply().messages().size()).isEqualTo(2);
 
     // when adding second interaction (reaching the limit)
@@ -355,10 +357,10 @@ public class SessionMemoryEntityTest {
 
     // then
     assertThat(result2.getReply().messages()).containsExactly(
-      new UserMessage(timestamp, userMsg1, COMPONENT_ID, TOKENS),
-      new AiMessage(timestamp, aiMsg1, COMPONENT_ID, TOKENS),
-      new UserMessage(timestamp + 1, userMsg2, COMPONENT_ID, TOKENS),
-      new AiMessage(timestamp + 1, aiMsg2, COMPONENT_ID, TOKENS));
+      new UserMessage(timestamp, userMsg1, COMPONENT_ID),
+      new AiMessage(timestamp, aiMsg1, COMPONENT_ID, TOKENS, TOKENS),
+      new UserMessage(timestamp + 1, userMsg2, COMPONENT_ID),
+      new AiMessage(timestamp + 1, aiMsg2, COMPONENT_ID, TOKENS, TOKENS));
     assertThat(result2.getReply().messages().size()).isEqualTo(4);
 
     // when adding third interaction (exceeding the limit)
@@ -369,10 +371,10 @@ public class SessionMemoryEntityTest {
 
     // then - first interaction should be removed
     assertThat(result3.getReply().messages()).containsExactly(
-      new UserMessage(timestamp +1, userMsg2, COMPONENT_ID, TOKENS),
-      new AiMessage(timestamp+1, aiMsg2, COMPONENT_ID, TOKENS),
-      new UserMessage(timestamp +2, userMsg3, COMPONENT_ID, TOKENS),
-      new AiMessage(timestamp +2, aiMsg3, COMPONENT_ID, TOKENS));
+      new UserMessage(timestamp + 1, userMsg2, COMPONENT_ID),
+      new AiMessage(timestamp + 1, aiMsg2, COMPONENT_ID, TOKENS, TOKENS),
+      new UserMessage(timestamp + 2, userMsg3, COMPONENT_ID),
+      new AiMessage(timestamp + 2, aiMsg3, COMPONENT_ID, TOKENS, TOKENS));
     assertThat(result3.getReply().messages().size()).isEqualTo(4);
   }
 
@@ -397,8 +399,8 @@ public class SessionMemoryEntityTest {
     // Create a message larger than the buffer
     String largeUserMsg = "A".repeat(100);
     String largeAiMsg = "B".repeat(100);
-    var userMessage = new UserMessage(timestamp, largeUserMsg, COMPONENT_ID, TOKENS);
-    var aiMessage = new AiMessage(timestamp, largeAiMsg, COMPONENT_ID, TOKENS);
+    var userMessage = new UserMessage(timestamp, largeUserMsg, COMPONENT_ID);
+    var aiMessage = new AiMessage(timestamp, largeAiMsg, COMPONENT_ID, TOKENS, TOKENS);
 
     // Set buffer size smaller than a single message
     var limitedBuffer = new SessionMemoryEntity.LimitedWindow(50);
@@ -425,15 +427,21 @@ public class SessionMemoryEntityTest {
     String aiMsg1 = "Hi!";
     String userMsg2 = "How are you?";
     String aiMsg2 = "I'm good, thanks!";
-    var um1 = new UserMessage(timestamp, userMsg1, COMPONENT_ID,  5);
-    var aim1 = new AiMessage(timestamp, aiMsg1, COMPONENT_ID, 3);
-    var um2 = new UserMessage(timestamp +1, userMsg2, COMPONENT_ID, 7);
-    var aim2 = new AiMessage(timestamp + 1, aiMsg2, COMPONENT_ID, 6);
-    var totalTokens = um1.tokens() + aim1.tokens() + um2.tokens() + aim2.tokens();
+    var um1 = new UserMessage(timestamp, userMsg1, COMPONENT_ID);
+    var aim1 = new AiMessage(timestamp, aiMsg1, COMPONENT_ID, 5, 3);
+    var firstTotal = aim1.inputTokens() + aim1.outputTokens();
+
+    var um2 = new UserMessage(timestamp +1, userMsg2, COMPONENT_ID);
+    // input from second AiMessage sums up with the firstTotal
+    var aim2 = new AiMessage(timestamp + 1, aiMsg2, COMPONENT_ID, firstTotal + 7, 6);
+
+    // the last message has the total (total from aim1 is already added to it)
+    var totalTokens = aim2.inputTokens() + aim2.outputTokens();
 
     // when
     testKit.method(SessionMemoryEntity::addInteraction)
       .invoke(new AddInteractionCmd(um1, aim1));
+
     testKit.method(SessionMemoryEntity::addInteraction)
       .invoke(new AddInteractionCmd(um2, aim2));
 
@@ -441,16 +449,6 @@ public class SessionMemoryEntityTest {
     var state = testKit.getState();
     assertThat(state.totalTokenUsage()).isEqualTo(totalTokens);
 
-    // And events should include token usage as well
-    var events = testKit.getAllEvents();
-    assertThat(events).hasSize(4);
-    assertThat(events.get(2)).isInstanceOf(SessionMemoryEntity.Event.UserMessageAdded.class);
-    var userEvent = (SessionMemoryEntity.Event.UserMessageAdded) events.get(2);
-    assertThat(userEvent.totalTokenUsage()).isEqualTo(totalTokens - aim2.tokens());
-
-    assertThat(events.get(3)).isInstanceOf(SessionMemoryEntity.Event.AiMessageAdded.class);
-    var userEvent2 = (SessionMemoryEntity.Event.AiMessageAdded) events.get(3);
-    assertThat(userEvent2.totalTokenUsage()).isEqualTo(totalTokens);
   }
 
   @Test
@@ -465,8 +463,9 @@ public class SessionMemoryEntityTest {
     String[] aiMsgs = {"A1", "A2", "A3", "A4"};
     for (int i = 0; i < userMsgs.length; i++) {
       testKit.method(SessionMemoryEntity::addInteraction)
-        .invoke(new AddInteractionCmd(new UserMessage(timestamp, userMsgs[i], COMPONENT_ID, TOKENS),
-            new AiMessage(timestamp, aiMsgs[i], COMPONENT_ID, TOKENS)));
+        .invoke(new AddInteractionCmd(
+          new UserMessage(timestamp, userMsgs[i], COMPONENT_ID),
+          new AiMessage(timestamp, aiMsgs[i], COMPONENT_ID, TOKENS, TOKENS)));
     }
 
     // Request only the last 4 messages (should be: U3, A3, U4, A4)
@@ -477,10 +476,10 @@ public class SessionMemoryEntityTest {
 
     // The expected last 4 messages
     var expected = List.of(
-      new UserMessage(timestamp, "U3", COMPONENT_ID, TOKENS),
-      new AiMessage(timestamp, "A3", COMPONENT_ID, TOKENS),
-      new UserMessage(timestamp, "U4", COMPONENT_ID, TOKENS),
-      new AiMessage(timestamp, "A4", COMPONENT_ID, TOKENS)
+      new UserMessage(timestamp, "U3", COMPONENT_ID),
+      new AiMessage(timestamp, "A3", COMPONENT_ID, TOKENS, TOKENS),
+      new UserMessage(timestamp, "U4", COMPONENT_ID),
+      new AiMessage(timestamp, "A4", COMPONENT_ID, TOKENS, TOKENS)
     );
 
     assertThat(result.getReply().messages()).containsExactlyElementsOf(expected);
